<?xml version="1.0"?>
<package format="2">
  <name>mecanum_robot_ver1</name>
  <version>0.0.1</version>
  <description>mecanum_robot_ver1</description>
  <maintainer email="dongilc@mju.ac.kr">MJU</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vesc_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>vesc_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  
  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vesc_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export></export>
  
</package>